# rustc2kern

./: Readme.md
c2_server/: Cargo.toml
c2_server/src/: dashboard.html  main.rs
