[package]
name = "c2_server"
version = "0.4.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
dashmap = "5"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
base64 = "0.22"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
